[C#] Upload the release zip as a CI artifact

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -210,6 +210,10 @@ jobs:
         run: |
           cd c_sharp
           ./build-release-nupkg.sh
+      - uses: actions/upload-artifact@v3
+        with:
+          name: org.ldk.nupkg
+          path: c_sharp/org.ldk.nupkg
       - name: Check latest auto-generated code is in git
         run: |
           # Checkout files that get updated with version information
