Restore android builds to Debian bullseye
There was never a reason to upgrade, and while it doesn't matter,
I'm not upgrading locally yet.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -560,7 +560,7 @@ jobs:
   android:
     runs-on: ubuntu-latest
     # Frankly, I'm not really sure why debian and ubuntu differ in the results here, they really shouldn't
-    container: debian:bookworm
+    container: debian:bullseye
     strategy:
       fail-fast: false
     steps:
