CI: retry commands that may segfault
Retry commands, that may segfault, several times to make CI
less flakey.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,10 @@ jobs:
         run: |
           cd ldk-c-bindings
           git config --global safe.directory "*"
-          ./genbindings.sh ../rust-lightning false
+          # this may segfault, so retry several times
+          for i in 1 2 3 4 5; do
+            ./genbindings.sh ../rust-lightning false && break
+          done
       - name: Build and Test TS Debug Bindings for Node
         run: |
           # We need FinalizationRegistry and top-level await support, which requires node 14.6/8,
@@ -149,7 +152,10 @@ jobs:
         run: |
           cd ldk-c-bindings
           git config --global safe.directory "*"
-          ./genbindings.sh ../rust-lightning true
+          # this may segfault, so retry several times
+          for i in 1 2 3 4 5; do
+            ./genbindings.sh ../rust-lightning true && break
+          done
       - name: Build and Test C# Debug Bindings
         run: |
           ./genbindings.sh ./ldk-c-bindings/ c_sharp true true
@@ -306,7 +312,10 @@ jobs:
       - name: Rebuild C bindings, and check the sample app builds + links
         run: |
           cd ldk-c-bindings
-          ./genbindings.sh ../rust-lightning true
+          # this may segfault, so retry several times
+          for i in 1 2 3 4 5; do
+            ./genbindings.sh ../rust-lightning true && break
+          done
       - name: Build Java Debug Bindings
         run: ./genbindings.sh ./ldk-c-bindings/ "-I/usr/lib/jvm/java-17-openjdk-amd64/include/ -I/usr/lib/jvm/java-17-openjdk-amd64/include/linux/" true false
       - name: Run Java Tests against Debug Bindings
