--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -576,7 +576,7 @@ jobs:
   android:
     runs-on: ubuntu-latest
     # Frankly, I'm not really sure why debian and ubuntu differ in the results here, they really shouldn't
-    container: debian:bullseye
+    container: debian:bookworm
     strategy:
       fail-fast: false
     steps:
